<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensor de Temperatura</string>
    <string name="bt_devices_to_connect">Dispositivos Bluetooth:</string>
    <string name="menu_settings">Configuraciones</string>
    <string name="brightness_control">Brightness control:</string>
    <string name="speed_control">Speed control:</string>
    <string name="button_message">Button message:</string>
    <string name="search_finished">Search finished</string>
    <string name="empty_device_name">&lt;empty&gt;</string>
    <string name="bt_not_enabled_leaving">El Bluetooth no esta encendido.</string>
    <string name="no_bt_support">Tu dispositivo no cuenta con Bluetooth.</string>
    <string name="enable_bt">Encender Bluetooth</string>
    <string name="connect">Conectar</string>
    <string name="disconnect">Desconectar</string>
    <string name="device_info">Informacion del dipositivo</string>
    <string name="search_for_devices">Search for devices</string>
    <string name="sort_by_services">Sort by device services</string>
    <string name="sort_by_type">Sort by device type</string>
    <string name="sort_by_name">Sort by device name</string>
    <string name="device_name_to_search">Device name to search</string>
    <string name="no_services">Devices without services</string>
    <string name="filter_av">Audio Video</string>
    <string name="filter_computer">Computadora</string>
    <string name="filter_health">Salud</string>
    <string name="filter_misc">Misc</string>
    <string name="filter_imaging">Multimedia</string>
    <string name="filter_networking">Redes</string>
    <string name="filter_peripheral">Periferico</string>
    <string name="filter_phone">Celular</string>
    <string name="filter_toy">Juguete</string>
    <string name="filter_wearable">Usable</string>
    <string name="filter_uncategorized">Sensor de Temperatura</string>
    <string name="sort_by_bonded_state">Sort by bonded state</string>
    <string name="log_dlg_title">Log</string>
    <string name="save_settings">Save settings</string>
    <string name="show_log">Show log</string>
    <string name="collect_devices_statistics">Collect devices statistics</string>
    <string name="searching">Searching…</string>
    <string name="stop">Stop</string>
    <string name="bonded">bonded</string>
    <string name="peripheral">Peripheral</string>
    <string name="uncategorized">Temperature Sensor</string>
    <string name="health">Health</string>
    <string name="toy">Toy</string>
    <string name="imaging">Imaging</string>
    <string name="networking">Networking</string>
    <string name="wearable">Wearable</string>
    <string name="misc">Misc</string>
    <string name="unknown">Unknown</string>
    <string name="phone_cellular">Phone (cellular)</string>
    <string name="phone_smart">Phone (smart)</string>
    <string name="av_handsfree">AV (handsfree)</string>
    <string name="unable_connect_to">Unable connect to %s</string>
    <string name="connection_was_lost">Connection to %s was lost</string>
    <string name="connected_to">Sensor conectado: %s</string>
    <string name="connecting_to">Conectando al sensor %s</string>
    <string name="is_not_connected">%s no esta disponible</string>
    <string name="successfully_connected_to">Successfully connected to %s</string>
    <string name="no_services_string">no services</string>
    <string name="phone_cordless">Phone (cordless)</string>
    <string name="av_headset">AV (headset)</string>
    <string name="computer_laptop">Computer (laptop)</string>
    <string name="computer_palm_pda">Computer (palm pda)</string>
    <string name="computer_desktop">Computer (desktop)</string>
    <string name="computer_server">Computer (server)</string>
    <string name="av_portable">AV (portable)</string>
    <string name="av_loudspeaker">AV (loudspeaker)</string>
    <string name="av_uncategorized">AV (Uncategorized)</string>
    <string name="av_display_loudspeaker">AV (display and loudspeaker)</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error_adding_device">Error while adding device: %s</string>
    <string name="send">Send</string>
    <string name="command_to_send">Command to send…</string>
    <string name="open_terminal">Bluetooth Terminal</string>
    <string name="menu_copy_to_clipboard">Copy</string>
    <string name="bluetooth_terminal">Bluetooth Terminal</string>
    <string name="menu_close_terminal">Close Terminal</string>
    <string name="settings">Settings</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="show_datetime_label">Show date-time label at Terminal</string>
    <string name="device">Device</string>
    <string name="device_name_label">Device Name:</string>
    <string name="device_address_label">Device Address:</string>
    <string name="device_class_label">Device Class:</string>
    <string name="device_major_class_label">Device Major Class:</string>
    <string name="bonding_state_label">Bonding State:</string>
    <string name="vendor_label">Vendor:</string>
    <string name="timestamp_label">Timestamp:</string>
    <string name="services">Services</string>
    <string name="rssi">RSSI</string>
    <string name="rssi_label">RSSI:</string>
    <string name="unbonded">unbonded</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="dialog_color_picker">Select color</string>
    <string name="colors">Colors</string>
    <string name="bonded_device_background">Bonded device background</string>
    <string name="sent_message_color">Sent message color</string>
    <string name="received_message_color">Received message color</string>
    <string name="sent_command_ending_char">Sent command ending char</string>
    <string name="received_command_ending_char">Received command ending char</string>
    <string name="none">None</string>
    <string name="cr">CR</string>
    <string name="lf">LF</string>
    <string name="crlf">CR+LF</string>
    <string name="menu_clear_terminal">Clear Log</string>
    <string name="menu_copy_terminal">Copy Log</string>
    <string name="terminal_cleared">Log cleared</string>
    <string name="terminal_copied">Log copied</string>
    <string name="set_command_using_long_tap">Set command using long tap</string>
    <string name="no_color">No color</string>
    <string name="settings_saved">Settings saved successfully</string>

</resources>